--- a/web/components/Layout/MobileMenu/MobileMenu.module.scss
+++ b/web/components/Layout/MobileMenu/MobileMenu.module.scss
@@ -1,4 +1,5 @@
 @use "styles/vars" as v;
+@use "sass:color";
 
 // Overlay for the menu
 .overlay {
@@ -22,7 +23,7 @@
   background: linear-gradient(
     135deg,
     v.$bg-dark 0%,
-    darken(v.$bg-dark, 5%) 100%
+    color.adjust(v.$bg-dark, $lightness: -5%) 100%
   );
   color: v.$color-white;
   overflow: hidden;
